<?xml version="1.0"?>
<package format="2">
  <name>unit_test_demo</name>
  <version>0.0.0</version>
  <description>The unit test package</description>
  <maintainer email="marc@todo.todo">marc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <export>

  </export>
</package>
